--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,8 +4,8 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    max-width: 456px;  
-    align-self: end;  
+    max-width: 456px;
+    align-self: end;
   }
   
   @media screen and (max-width: 768px) {
@@ -17,7 +17,7 @@
 
   @media screen and (max-width: 700px) {
     .place__website {
-      max-width: calc(100%-32px);
+      max-width: calc(100% - 32px);
     }
   }
 
@@ -25,11 +25,7 @@
   @media screen and (max-width: 320px) {
     .place__website {
       max-width: 288px;
-      padding-left: 16px;
-     /* gap: 32px;
-      grid-column-start: 1;
-      grid-row-start: 2;
-      margin-left: 16px;   */    
+      padding-left: 16px;       
     }  
   }
   
