--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,8 +2,8 @@
   .place {
     margin: 0 auto;
     max-width: 984px;
-    display: grid;  
-    grid-template-columns: 460px 1fr; 
+    display: grid;
+    grid-template-columns: 460px 1fr;
     column-gap: 40px;
     row-gap: 48px;
    }
@@ -12,18 +12,18 @@
   @media screen and (max-width: 1024px) {
     .place {
       max-width: 100%;
-      grid-template-columns: 440px 1fr;  
+      grid-template-columns: 440px 1fr;
       column-gap: 32px;
-    }  
+    }
   }
  
   
   @media screen and (max-width: 768px) {
     .place {
       max-width: 100%;
-      grid-template-columns: 340px 1fr;  
+      grid-template-columns: 340px 1fr;
       column-gap: 28px;
-    }  
+    }
   }
  
   
@@ -31,17 +31,17 @@
     .place {
       margin: 0;
       max-width: 100%;
-      grid-template-columns: 1fr;        
-    }  
+      grid-template-columns: 1fr;     
+    }
   }
  
 
   @media screen and (max-width: 320px) {
     .place {
       max-width: 100%;
-      grid-template-columns: 1fr;  
+      grid-template-columns: 1fr;
       column-gap: 32px;
-    }  
-  }
+    }
+  }s
  
 
