--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,25 +8,25 @@
   gap: 80px;
   color: #ffffff;
   padding-bottom: 92px;
-  max-width: 984px;  
+  max-width: 984px;
 }
 
-@media screen and (max-width: 1024px) {  
+@media screen and (max-width: 1024px) {
   .places {
    /*max-width: 928px; */
-    max-width: calc (100%-96px);
+    max-width: calc(100% - 96px);
     margin-left: 48px;
-    margin-right: 48px;   
+    margin-right: 48px;
   }
   }
 
-   @media screen and (max-width: 768px) {  
+   @media screen and (max-width: 768px) {
     .places {
-      max-width: calc (100%-48px);
+      max-width: calc(100% - 48px);
       gap: 72px;
       margin-left: 24px;
-      margin-right: 24px;   
-      padding-bottom: 90px;     
+      margin-right: 24px;
+      padding-bottom: 90px;
     }
     }
  
