--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,7 +4,6 @@
     margin: 0 auto;
     padding-top: 92px;
     padding-bottom: 92px;
-   /* padding: 92px 148px 92px;  */
     color: #ffffff;
     max-width: 984px;
     /*max-height: 429px;*/
@@ -12,34 +11,26 @@
   
   @media screen and (max-width: 1024px) {
     .intro {
-      /*max-width: 928px;*/
-      /*padding-left: 48px;*/
-      /*padding-right: 48px;*/
       max-width: calc(100% - 96px);
     }
   }
   
   
   @media screen and (max-width: 768px) {
-    .intro {               
+    .intro {
       padding-top: 88px;
       padding-bottom: 88px;
-     /* padding-left: 24px;*/
-     /* padding: 88px 24px 88px;*/
-     /* max-width: 768px;   */ 
      max-width: calc(100% - 48px);
     }  
   }
   
   
   @media screen and (max-width: 320px) {
-    .intro {       
+    .intro {
       padding-top: 64px;
       padding-bottom: 64px;
-      /*padding: 64px 16px 64px;
-      max-width: 320px;   */
-      max-width: calc(100%-32px);      
-    }  
+      max-width: calc(100% - 32px);
+    }
   }
   
   
