--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,10 +10,10 @@
   }
   
   @media screen and (max-width: 1024px) {
-    .photo-grid {      
-     max-width: 928pxcalc(100%-96px);;
+    .photo-grid {
+     max-width: 928pxcalc(100% - 96px);
      padding-left: 48px;
-     padding-right: 48px; 
+     padding-right: 48px;
     }
   }
   
@@ -26,10 +26,9 @@
     }
   }
   
-
   @media screen and (max-width: 648px) {
-    .photo-grid {    
-      max-width: calc(100%-32px);
+    .photo-grid {
+      max-width: calc(100% - 32px);
       padding-left: 16px;
       padding-right: 16px;
       padding-bottom: 88px;
@@ -39,7 +38,7 @@
 
   @media screen and (max-width: 320px) {
     .photo-grid {
-       width: calc(100%-32px);
+       width: calc(100% - 32px);
        padding-bottom: 64px;
         gap: 12px;
     }
