--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -11,7 +11,7 @@
   
   @media screen and (max-width: 1024px) {
     .photo-grid {
-     max-width: 928pxcalc(100% - 96px);
+     max-width: calc(100% - 96px);
      padding-left: 48px;
      padding-right: 48px;
     }
@@ -19,7 +19,7 @@
   
   @media screen and (max-width: 768px) {
     .photo-grid {
-      max-width: calc(100%-48px);
+      max-width: calc(100% - 48px);
       padding-left: 24px;
       padding-right: 24px;
       padding-bottom: 88px;
