--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,38 +1,34 @@
-
-
 .footer {
-    margin: 0 auto;
-    margin-top: 92px;
-    padding-bottom: 24px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    max-width: 1184px;
+  margin: 0 auto;
+  margin-top: 92px;
+  padding-bottom: 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 1184px;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    max-width: calc(100% - 96px);
   }
-  
-  @media screen and (max-width: 1024px) {
-     .footer {
-      max-width: calc(100% - 96px);       
-     } 
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    margin-top: 88px;
+    max-width: calc(100% - 48px);
   }
-  
-  @media screen and (max-width: 768px) {
-    .footer {
-      max-width: calc(100% - 48px);
-      margin: 0 auto;
-      margin-top: 88px;
-    }
+}
+
+@media screen and (max-width: 680px) {
+  .footer {
+    margin-top: 64px;
+    margin-left: 0;
+    padding-left: 16px;
+    padding-right: 118px;
+    max-width: calc(100% - 118px - 16px);
+    flex-direction: column;
+    color: #FFFFFF;
   }
-  
-  @media screen and (max-width: 680px) {
-    .footer {
-     max-width: calc(100% - 186px);
-     margin: 64px auto 0;
-     padding-left: 16px;
-     padding-right: 118px;
-     flex-direction: column;
-     color: #FFFFFF;
-    }
-  }
-  
-  
+}
