--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,38 +1,28 @@
-
-
 .intro__text {
-    margin: 0;
-    padding-top: 40px;
-    padding-bottom: 33px;
-   /* padding: 40px 294px 33px 0;  */
-    font-style: normal;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.63;
-    text-align: left;
-    max-width: 690px;    
-  }
-  
-  @media screen and (max-width: 1024px) {
-    .intro__text {
-      padding-left: 48px;
-    /*  margin: 0 auto;
-      padding-right: 238px;*/
-    }
-  }
+  margin: 0;
+  padding-top: 40px;
+  padding-bottom: 33px;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.63;
+  text-align: left;
+  max-width: 690px;
+}
 
-  @media screen and (max-width: 768px) {
-    .intro__text {
-      padding-left: 24px;
-    }
+@media screen and (max-width: 1024px) {
+  .intro__text {}
+}
+
+@media screen and (max-width: 768px) {
+  .intro__text {
+    max-width: 720px;
   }
-  
-  @media screen and (max-width: 320px) {
-    .intro__text {
-      padding-left: 16px;
-      padding-right: 16px;
-      margin: 0 auto;
-      max-width: 288px;
-    }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__text {
+    margin: 0 auto;
+    max-width: 288px;
   }
-   
+}
