--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,15 +1,12 @@
-
-
 .lead__caption {
-    margin: 0 auto;
-    padding: 0;
-    font-family: "Inter";
-    font-style: normal;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 1.4;
-    text-align: left;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-  }
-  
+  margin: 0 auto;
+  padding: 0;
+  font-family: "Inter", Arial, sant-serif;
+  font-style: normal;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 1.4;
+  text-align: left;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
