--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,45 +1,38 @@
-
 .lead__subtitle {
-    margin: 0 auto;
-   /* padding: 0 172px 64px;*/
-    padding-top: 0;
-    padding-bottom: 64px;
-    font-style: normal;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 1.2;
-    text-align: center;
-    max-width: 640px;
-    max-height: 72px;
+  margin: 0 auto;
+  padding-top: 0;
+  padding-bottom: 64px;
+  font-style: normal;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.2;
+  text-align: center;
+  max-width: 640px;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    /*  padding-left: 132px;
+      padding-right: 132px;*/
+    padding-bottom: 56px;
   }
-  
-  @media screen and (max-width: 1024px) {
-    .lead__subtitle {
-      max-width: 640px;
-      padding-left: 132px;
-      padding-right: 132px;
-      padding-bottom: 56px;
-    }
-  }
-  
-  
+}
+
+/*
   @media screen and (max-width: 768px) {
     .lead__subtitle {
       padding-left: 64px;
-      padding-right: 64px;
-      line-height: 1.2;
+      padding-right: 64px;      
     }
+  } */
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    max-width: 288px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 40px;
+    font-size: 16px;
+    line-height: 1.25;
   }
-  
-  @media screen and (max-width: 767px) {
-    .lead__subtitle {
-      max-width: 288px;
-      padding-left: 16px;
-      padding-right: 16px;
-      padding-bottom: 40px;
-      font-size: 16px;
-      line-height: 1.25;
-    }
-  }
-  
-  
+}
