--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,36 +1,24 @@
-
-
 .lead__title {
-    margin: 0 auto;
-    max-width: 720px;
-    padding-bottom: 32px;
-    font-style: normal;
-    font-size: 96px;
-    font-weight: 900;
-    line-height: 1.04;
-    text-align: center;
+  margin: 0 auto;
+  max-width: 720px;
+  padding-bottom: 32px;
+  font-style: normal;
+  font-size: 96px;
+  font-weight: 900;
+  line-height: 1.04;
+  text-align: center;
+}
+
+/*
+@media screen and (max-width: 1024px) {
+  .lead__title {}
+} */
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    padding-bottom: 16px;
+    font-size: 40px;
+    line-height: 1.1;
+    max-width: 288px;
   }
-  
-  @media screen and (max-width: 1024px) {
-    .lead__title {
-     max-width: 720px;
-    }
-  }
-  
-  @media screen and (max-width: 768px) {
-      .lead__title {
-         padding-left: 24px;
-         padding-right: 24px;
-      }
-    }
-  
-  @media screen and (max-width: 767px) {
-      .lead__title {
-       padding-bottom: 16px;
-        font-size: 40px;
-        line-height: 1.1;
-        max-width: 288px;
-      }
-    }
-  
-  
+}
