--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,7 +9,12 @@
     margin: 0 auto;
     font-family: 'Inter', Arial, sant-serif;
     color: #ffffff;
-    width: 100%;
-    min-width: 320px;
+    width: 100%;    
+    min-width: 320px;      
   }
+  * {
+    border: red solid 1px;  
+  } 
+  
+    
   
