--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,47 +1,39 @@
-
-
 .photo-grid {
-    margin: 0 auto;
-    padding-bottom: 92px;
-    max-width: 1184px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    gap: 16px;
-  }
-  
-  @media screen and (max-width: 1024px) {
-    .photo-grid {
-     max-width: calc(100% - 96px);
-     padding-left: 48px;
-     padding-right: 48px;
-    }
-  }
-  
-  @media screen and (max-width: 768px) {
-    .photo-grid {
-      max-width: calc(100% - 48px);
-      padding-left: 24px;
-      padding-right: 24px;
-      padding-bottom: 88px;
-    }
-  }
-  
-  @media screen and (max-width: 648px) {
-    .photo-grid {
-      max-width: calc(100% - 32px);
-      padding-left: 16px;
-      padding-right: 16px;
-      padding-bottom: 88px;
-    }
-  }
-  
+  margin: 0 auto;
+  padding-bottom: 92px;
+  max-width: 1184px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  gap: 16px;
+}
 
-  @media screen and (max-width: 320px) {
-    .photo-grid {
-       width: calc(100% - 32px);
-       padding-bottom: 64px;
-        gap: 12px;
-    }
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    max-width: calc(100% - 96px);
+    gap: 14px;
   }
-  
-  
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    max-width: calc(100% - 48px);
+    gap: 16px;
+    padding-bottom: 88px;
+  }
+}
+
+/*
+@media screen and (max-width: 425px) {
+  .photo-grid {
+    max-width: calc(100% - 32px);
+  }
+} */
+
+
+@media screen and (max-width: 360px) {
+  .photo-grid {    
+    max-width: calc(100% - 32px);
+    padding-bottom: 64px;
+    gap: 12px;
+  }
+}
