--- a/blocks/place/__main-text/place__main-text.css
+++ b/blocks/place/__main-text/place__main-text.css
@@ -1,40 +1,38 @@
-
-
 .place__main-text {
-    margin: 0;
-    font-style: normal;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.61;
-    text-align: left;
-    max-width: 484px;
-  }
-  
+  margin: 0;
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.61;
+  text-align: left;
+  max-width: 485px;
+}
 
-  @media screen and (max-width: 1024px) {
-    .place__main-text {
-      max-width: 456px;
-    }
-  }
- 
 
-  @media screen and (max-width: 768px) {
-    .place__main-text {
-      font-size: 16px;
-      line-height: 1.63;
-      max-width: 352px;
-    }
+@media screen and (max-width: 1024px) {
+  .place__main-text {
+    max-width: 100%;
   }
- 
-  @media screen and (max-width: 700px) {
-    .place__main-text {
-      max-width: 652px;        
-    }
+}
+
+
+@media screen and (max-width: 886px) {
+  .place__main-text {
+    font-size: 16px;
+    line-height: 1.63;
+    max-width: 100%;
   }
-  
-  
-  @media screen and (max-width: 320px) {
-    .place__main-text {
-      max-width: 288px;            
-    }  
-  } 
+}
+
+@media screen and (max-width: 760px) {
+  .place__main-text {
+    max-width: 100%;
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+  .place__main-text {
+    max-width: 288px;
+  }
+}
