--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,21 +1,21 @@
-
-
 .place__paragraph {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .place__paragraph:first-child {
-   padding-bottom: 26px;
-  }
-  
-  .place:last-child {
-   padding-bottom: 0;
-  }
+  margin: 0;
+  padding: 0;
+  padding-bottom: 26px;
+}
 
-  @media screen and (max-width: 768px) {
-    .place__paragraph:first-child {
-      padding-bottom: 25px;
-    }
+.place__paragraph:last-child {
+  padding-bottom: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .place__paragraph {
+    padding-bottom: 27px;
   }
-  
+}
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    padding-bottom: 25px;
+  }
+}
