--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -8,21 +8,14 @@
     align-self: end;
   }
   
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 886px) {
     .place__website {
-      max-width: 352px;
+      max-width: 100%;
     }
   }
 
 
-  @media screen and (max-width: 700px) {
-    .place__website {
-      max-width: calc(100% - 32px);
-    }
-  }
-
-
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 760px) {
     .place__website {
       max-width: 288px;
       padding-left: 16px;
