--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,8 +1,5 @@
-    
 .places {
   margin: 0 auto;
- /* margin-left: 148px;
-  margin-right: 148px;*/
   display: grid;
   grid-template-columns: 1fr;
   gap: 80px;
@@ -12,35 +9,29 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .places {
-   /*max-width: 928px; */
+  .places {    
     max-width: calc(100% - 96px);
-    margin-left: 48px;
-    margin-right: 48px;
+   /* margin-left: 48px;
+    margin-right: 48px;*/
   }
+}
+
+@media screen and (max-width: 886px) {
+  .places {
+    max-width: calc(100% - 48px);
+    gap: 72px;
+   /* margin-left: 24px;
+    margin-right: 24px; */
+    padding-bottom: 90px;
   }
+}
 
-   @media screen and (max-width: 768px) {
-    .places {
-      max-width: calc(100% - 48px);
-      gap: 72px;
-      margin-left: 24px;
-      margin-right: 24px;
-      padding-bottom: 90px;
-    }
-    }
- 
-    
-   @media screen and (max-width: 320px) {
-    .places {
-      max-width: 320px;
-      gap: 50px;
-      margin-left: 0;
-      margin-right: 0;
-      padding-bottom: 66px;
-    }
-    }
-  
-
-
-
+@media screen and (max-width: 760px) {
+  .places {
+    max-width: 100%;
+    gap: 50px;
+   /* margin-left: 0;
+    margin-right: 0; */
+    padding-bottom: 66px;
+  }
+}
