--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,17 +1,16 @@
-
-
 .cover__link {
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background: rgba(42, 44, 47, 0.3);
-  }
-  
-  .cover__link:hover {
-    background: rgba(42, 44, 47, 0.8);
-    }
-  
-  
+  margin: 0 auto;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 100%;
+  min-height: 100%;
+  background: rgba(42, 44, 47, 0.3);
+}
+
+.cover__link:hover {
+  background: rgba(42, 44, 47, 0.8);
+}
