--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,19 +11,20 @@
 }
 
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 600px) {
   .cover__title {
+    justify-self: center;
     max-width: 288px;
     padding-bottom: 16px;
-    font-size: 42px;
+    font-size: 32px;
     line-height: 1.09;
   }
 }
 
 
 @media screen and (max-width: 320px) {
-  .cover__title {
-    max-width: 288px;
+  .cover__title {    
+    max-width: 100%;
     padding-bottom: 16px;
     font-size: 32px;
     line-height: 1.09;
