--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,9 +2,9 @@
   margin: 0 auto;
   max-width: 1184px;
   background-image: url(../../images/cover-trains.png);
-  background-position: center center;
+  background-position: center;
   background-size: cover;
-  aspect-ratio: 1 / 0.625;
+  aspect-ratio: 1 / 0.625;  
 
   /*display: flex;
     flex-direction: column; 
