--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,20 +1,17 @@
-
-.page { 
-   /* -moz-osx-font-smoothing: grayscale;
+.page {
+  /* -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;*/
-    background-color: #2A2C2F;
-    margin: 0 auto;
-    font-family: 'Inter', Arial, sant-serif;
-    color: #ffffff;
-    width: 100%;    
-    min-width: 320px;      
-  }
-  * {
-    border: red solid 1px;  
-  } 
-  
-    
-  
+  background-color: #2A2C2F;
+  margin: 0 auto;
+  font-family: 'Inter', Arial, sant-serif;
+  color: #ffffff;
+  width: 100%;
+  min-width: 320px;
+}
+
+/** {
+  border: red solid 1px;
+}*/
