--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -16,6 +16,8 @@
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
+    padding-left: 16px;
+    padding-right: 16px;
     padding-bottom: 25px;
   }
 }
