--- a/blocks/place/__main-text/place__main-text.css
+++ b/blocks/place/__main-text/place__main-text.css
@@ -20,19 +20,12 @@
   .place__main-text {
     font-size: 16px;
     line-height: 1.63;
-    max-width: 100%;
+    letter-spacing: -0.4px;
   }
 }
-
-@media screen and (max-width: 760px) {
-  .place__main-text {
-    max-width: 100%;
-  }
-}
-
 
 @media screen and (max-width: 320px) {
   .place__main-text {
-    max-width: 288px;
+    letter-spacing: 0;
   }
 }
