--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -28,8 +28,7 @@
 
 @media screen and (max-width: 760px) {
   .place {
-    max-width: 100%;
     grid-template-columns: 1fr;
-    column-gap: 32px;
+    row-gap: 32px;
   }
 }
